--- a/circle-3d/package.json
+++ b/circle-3d/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "three": "^0.158.0",
+    "three": "^0.158.0"
+  },
+  "devDependencies": {
     "vite": "^5.0.0"
   }
 }
